markdown-pages/ja/tidb/release-5.4/benchmark/v4.0-performance-benchmarking-with-tpch.md
---
title: TiDB TPC-H Performance Test Report -- v4.0 vs. v3.0
summary: Compare the TPC-H performance of TiDB 4.0 and TiDB 3.0.
---

# TiDBTPC-Hパフォーマンステストレポート-v4.0とv3.0 {#tidb-tpc-h-performance-test-report-v4-0-vs-v3-0}

## テスト目的 {#test-purpose}

このテストは、オンライン分析処理（OLAP）シナリオでのTiDB4.0とTiDB3.0のTPC-Hパフォーマンスを比較することを目的としています。

[TiFlash](/tiflash/tiflash-overview.md)はTiDBv4.0で導入され、TiDBのHybrid Transactional and Analytical Processing（HTAP）機能が強化されているため、このレポートのテストオブジェクトは次のとおりです。

-   TiKVからのみデータを読み取るTiDBv3.0。
-   TiKVからのみデータを読み取るTiDBv4.0。
-   インテリジェントな選択に基づいてTiKVおよびTiFlashからデータを自動的に読み取るTiDBv4.0。

## テスト環境（AWS EC2） {#test-environment-aws-ec2}

### ハードウェア構成 {#hardware-configuration}

| サービスの種類      | EC2タイプ     | インスタンス数 |
| :----------- | :--------- | :------ |
| PD           | m5.xlarge  | 3       |
| TiDB         | c5.4xlarge | 2       |
| TiKV＆TiFlash | i3.4xlarge | 3       |
| TPC-H        | m5.xlarge  | 1       |

### ソフトウェアバージョン {#software-version}

| サービスの種類    | ソフトウェアバージョン |
| :--------- | :---------- |
| PD         | 3.0および4.0   |
| TiDB       | 3.0および4.0   |
| TiKV       | 3.0および4.0   |
| TiFlash    | 4.0 4.0     |
| tiup-bench | 0.2         |

### パラメータ設定 {#parameter-configuration}

#### v3.0 {#v3-0}

v3.0の場合、TiDB、TiKV、およびPDはデフォルトのパラメーター構成を使用します。

##### 可変構成 {#variable-configuration}


```sql
set global tidb_distsql_scan_concurrency = 30;
set global tidb_projection_concurrency = 16;
set global tidb_hashagg_partial_concurrency = 16;
set global tidb_hashagg_final_concurrency = 16;
set global tidb_hash_join_concurrency = 16;
set global tidb_index_lookup_concurrency = 16;
set global tidb_index_lookup_join_concurrency = 16;
```

#### v4.0 {#v4-0}

v4.0の場合、TiDBはデフォルトのパラメーター構成を使用します。

##### TiKV構成 {#tikv-configuration}


```yaml
readpool.storage.use-unified-pool: false
readpool.coprocessor.use-unified-pool: true
```

##### PD構成 {#pd-configuration}


```yaml
replication.enable-placement-rules: true
```

##### TiFlash構成 {#tiflash-configuration}


```yaml
logger.level: "info"
learner_config.log-level: "info"
```

##### 可変構成 {#variable-configuration}

> **ノート：**
>
> セッション変数が存在する可能性があります。すべてのクエリを現在のセッションで実行することをお勧めします。


```sql
set global tidb_allow_batch_cop = 1;
set session tidb_opt_distinct_agg_push_down = 1;
set global tidb_distsql_scan_concurrency = 30;
set global tidb_projection_concurrency = 16;
set global tidb_hashagg_partial_concurrency = 16;
set global tidb_hashagg_final_concurrency = 16;
set global tidb_hash_join_concurrency = 16;
set global tidb_index_lookup_concurrency = 16;
set global tidb_index_lookup_join_concurrency = 16;
```

## テスト計画 {#test-plan}

### ハードウェアの前提条件 {#hardware-prerequisite}

ディスクとI/OリソースのTiKVとTiFlashの競合を回避するには、EC2に設定された2つのNVMeSSDディスクを`/data1`と`/data2`にマウントします。 TiKVを`/data1`にデプロイし、TiFlashを`/data2`にデプロイします。

### テストプロセス {#test-process}

1.  [TiUP](/tiup/tiup-overview.md#tiup-overview)を使用してTiDBv4.0およびv3.0をデプロイします。

2.  TiUPのベンチツールを使用して、スケールファクター10のTPC-Hデータをインポートします。

    -   次のコマンドを実行して、データをv3.0にインポートします。

        
        ```bash
        tiup bench tpch prepare \
        --host ${tidb_v3_host} --port ${tidb_v3_port} --db tpch_10 \
        --sf 10 \
        --analyze --tidb_build_stats_concurrency 8 --tidb_distsql_scan_concurrency 30
        ```

    -   次のコマンドを実行して、データをv4.0にインポートします。

        
        ```bash
        tiup bench tpch prepare \
          --host ${tidb_v4_host} --port ${tidb_v4_port} --db tpch_10 --password ${password} \
          --sf 10 \
          --tiflash \
          --analyze --tidb_build_stats_concurrency 8 --tidb_distsql_scan_concurrency 30
        ```

3.  TPC-Hクエリを実行します。

    1.  TPC-HSQLクエリファイルをダウンロードします。

        
        ```bash
        git clone https://github.com/pingcap/tidb-bench.git && cd tpch/queries
        ```

    2.  TPC-Hクエリを実行し、各クエリの実行時間を記録します。

        -   TiDB v3.0の場合、MySQLクライアントを使用してTiDBに接続し、クエリを実行し、各クエリの実行時間を記録します。
        -   TiDB v4.0の場合、MySQLクライアントを使用してTiDBに接続し、データの読み取り元に基づいて次のいずれかの操作を選択します。
            -   データがTiKVからのみ読み取られる場合は、 `set @@session.tidb_isolation_read_engines = 'tikv,tidb';`を設定し、クエリを実行して、各クエリの実行時間を記録します。
            -   コストベースのインテリジェントな選択に基づいてデータがTiKVおよびTiFlashから自動的に読み取られる場合は、 `set @@session.tidb_isolation_read_engines = 'tikv,tiflash,tidb';`を設定し、クエリを実行して、各クエリの実行時間を記録します。

4.  クエリ実行時間のデータを抽出して整理します。

## テスト結果 {#test-result}

> **ノート：**
>
> このテストでSQLステートメントが実行されるテーブルには、プライマリキーのみがあり、セカンダリインデックスはありません。したがって、以下のテスト結果はインデックスの影響を受けません。

| クエリID | v3.0   | v4.0TiKVのみ | v4.0 TiKV/TiFlashを自動的に |
| :---- | :----- | :--------- | :--------------------- |
| 1     | 7.78秒  | 7.45秒      | 2.09秒                  |
| 2     | 3.15秒  | 1.71秒      | 1.71秒                  |
| 3     | 6.61秒  | 4.10秒      | 4.05秒                  |
| 4     | 2.98秒  | 2.56秒      | 1.87秒                  |
| 5     | 20.35秒 | 5.71秒      | 8.53秒                  |
| 6     | 4.75秒  | 2.44秒      | 0.39秒                  |
| 7     | 7.97秒  | 3.72秒      | 3.59秒                  |
| 8     | 5.89秒  | 3.22秒      | 8.59秒                  |
| 9     | 34.08秒 | 11.87秒     | 15.41秒                 |
| 10    | 4.83秒  | 2.75秒      | 3.35秒                  |
| 11    | 3.98秒  | 1.60秒      | 1.59秒                  |
| 12    | 5.63秒  | 3.40秒      | 1.03秒                  |
| 13    | 5.41秒  | 4.56秒      | 4.02秒                  |
| 14    | 5.19秒  | 3.10秒      | 0.78秒                  |
| 15    | 10.25秒 | 1.82秒      | 1.26秒                  |
| 16    | 2.46秒  | 1.51秒      | 1.58秒                  |
| 17    | 23.76秒 | 12.38秒     | 8.52秒                  |
| 18    | 17.14秒 | 16.38秒     | 16.06秒                 |
| 19    | 5.70秒  | 4.59秒      | 3.20秒                  |
| 20    | 4.98秒  | 1.89秒      | 1.29秒                  |
| 21    | 11.12秒 | 6.23秒      | 6.26秒                  |
| 22    | 4.49秒  | 3.05秒      | 2.31秒                  |

![TPC-H](https://docs-download.pingcap.com/media/images/docs/tpch-v4vsv3.png)

上記のパフォーマンス図では、次のようになります。

-   青い線はv3.0を表します。
-   赤い線はv4.0（TiKVからのみ読み取られるデータ）を表します。
-   黄色の線はv4.0を表します（インテリジェントな選択に基づいてTiKVおよびTiFlashから自動的に読み取られるデータ）。
-   y軸は、クエリの実行時間を表します。時間が短いほど、パフォーマンスは向上します。

結果の説明：

-   **v4.0 TiKV Only**は、TiDBがTiKVからのみデータを読み取ることを意味します。この結果は、TiDBとTiKVがv4.0にアップグレードされた後、TPC-Hのパフォーマンスが向上したことを示しています。
-   **v4.0 TiKV / TiFlashは自動的**に、TiDBオプティマイザーがコスト見積もりに従ってTiFlashレプリカからデータを読み取るかどうかを自動的に決定することを意味します。結果は、TPC-Hのパフォーマンスがv4.0の完全なHTAP形式で向上したことを示しています。

上の図から、TPC-Hのパフォーマンスが22のクエリのセットで平均して約100％向上していることがわかります。
